--- a/app/src/main/res/layout/activity_appointment_acknowledgement.xml
+++ b/app/src/main/res/layout/activity_appointment_acknowledgement.xml
@@ -310,15 +310,15 @@
     <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:gravity="left|center"
         android:textStyle="bold"
-
+        android:layout_marginTop="5dp"
         android:text="@string/location_details"
         android:textSize="@dimen/font_size" />
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="5dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="@drawable/rounded_corner">
