--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left|center"
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="5dp"
                 android:text="@string/confirmation_details"
                 android:textAllCaps="false"
                 android:textSize="@dimen/font_size"
@@ -251,15 +251,15 @@
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="left|center"
                 android:textStyle="bold"
-
                 android:text="@string/location_details"
                 android:textSize="@dimen/font_size" />
             <TableLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="5dp"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:background="@drawable/rounded_corner">
