--- a/app/src/main/res/layout/location_service2.xml
+++ b/app/src/main/res/layout/location_service2.xml
@@ -20,11 +20,12 @@
         android:layout_alignParentStart="true">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:text="@string/options"
             android:textSize="@dimen/font_size"
             android:paddingLeft="5dp"
             android:textStyle="bold"
+            android:layout_marginTop="5dp"
             android:id="@+id/text"
             android:gravity="left|center"
             android:layout_alignParentTop="true"
@@ -225,7 +226,7 @@
     <include layout="@layout/activity_appointement_booking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:id="@+id/include2"
         android:layout_below="@+id/relativeLayou"
         android:layout_alignParentLeft="true"
@@ -240,6 +241,7 @@
         android:textSize="@dimen/font_size"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="7dp"
         android:textColor="@color/inside_blue"
         android:layout_alignParentBottom="true"
