--- a/app/src/main/res/layout/activity_appointement_booking.xml
+++ b/app/src/main/res/layout/activity_appointement_booking.xml
@@ -36,6 +36,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
+            android:visibility="gone"
             android:background="@drawable/rounded_corner"
             android:orientation="vertical">
 
