--- a/app/src/main/res/layout/login_alert.xml
+++ b/app/src/main/res/layout/login_alert.xml
@@ -154,19 +154,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/line5"
+            android:layout_below="@+id/forgotPassword"
             android:background="@color/gray"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_login"
                 android:layout_width="0dp"
+                android:layout_weight=".49"
                 style="@style/loginPage"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/line4"
-                android:layout_toEndOf="@+id/tv_Password"
-                android:layout_toRightOf="@+id/tv_Password"
-                android:layout_weight=".49"
                 android:text="@string/login"
                 android:textAlignment="center"
                 android:background="@color/dayName"
@@ -176,10 +173,9 @@
                 android:id="@+id/line4"
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:layout_alignLeft="@+id/tv_cancel"
-                android:layout_below="@+id/tv_reset_password"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_toRightOf="@+id/tv_login"
                 android:background="@android:color/white" />
 
             <TextView
@@ -187,15 +183,12 @@
                 android:layout_width="0dp"
                 style="@style/loginPage"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_cancel"
-                android:layout_alignBottom="@+id/tv_cancel"
-                android:layout_toEndOf="@+id/tv_cancel"
-                android:layout_toRightOf="@+id/tv_cancel"
-                android:layout_weight=".49"
                 android:background="@android:color/darker_gray"
                 android:text="@string/cancel"
+                android:layout_weight=".49"
                 android:textAlignment="center"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                />
         </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
