--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="hedaingColorApp">#FFF0CC</color>
     <color name="logo_bg">#04c7ff</color>
     <color name="black">#000</color>
+    <color name="green_confirmation">#2AFF2A</color>
 
     <color name="home_back">#FEFEFE</color>
     <color name="list_back">#f2f2f2</color>
