--- a/app/src/main/res/layout/activity_appointment_acknowledgement.xml
+++ b/app/src/main/res/layout/activity_appointment_acknowledgement.xml
@@ -27,7 +27,7 @@
             android:text="@string/confirmation_msg"
             android:textAllCaps="false"
             android:textSize="@dimen/font_size"
-           android:textColor="@color/green" />
+           android:textColor="@color/green_confirmation" />
 
     <TextView
         android:id="@+id/tv_serviceTypeAdapter"
