--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -365,7 +365,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
+    <Button
         android:id="@+id/tv_editAppointment"
         android:layout_width="match_parent"
         android:layout_height="40dp"
