--- a/app/src/main/res/layout/login_alert.xml
+++ b/app/src/main/res/layout/login_alert.xml
@@ -1,197 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    >
+   >
 
-
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner"
+        android:layout_gravity="center"
+       >
 
-        android:layout_centerInParent="true"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="15dp"
-        android:layout_alignParentStart="true">
 
-        <TextView
-            android:id="@+id/loginText"
-            style="@style/loginPage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_toRightOf="@+id/line5"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
 
-        <View
-            android:id="@+id/line"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/loginText"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/darker_gray" />
 
-        <TextView
-            android:id="@+id/tv_email"
-            style="@style/loginPage"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:paddingRight="50dp"
-            android:layout_marginLeft="5dp"
-            android:text="@string/email"
-            android:textColor="@color/black"
-            android:layout_alignBaseline="@+id/et_email"
-            android:layout_alignBottom="@+id/et_email"
-            android:layout_toRightOf="@+id/tv_reset_password"
-            android:layout_toEndOf="@+id/tv_reset_password" />
+            android:background="@android:color/transparent"
+            android:padding="10dp"
+           >
 
-        <EditText
-            android:id="@+id/et_email"
-
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight=".59"
-            android:hint="@string/email1"
-            android:inputType="textEmailAddress"
-            android:singleLine="true"
-            android:layout_below="@+id/loginText"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignLeft="@+id/et_password"
-            android:layout_alignStart="@+id/et_password" />
-
-        <View
-            android:id="@+id/line2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_below="@+id/et_email"
-            android:layout_marginBottom="10dp" />
-
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignBaseline="@+id/tv_Password"
-            android:layout_alignBottom="@+id/tv_Password"
-            android:layout_toRightOf="@+id/tv_Password"
-            android:layout_weight=".59"
-            android:hint="@string/paswordlogin"
-            android:inputType="textPassword"
-            android:singleLine="true" />
-
-        <View
-            android:id="@+id/line3"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_below="@+id/et_password"
-            android:layout_marginBottom="10dp" />
-
-        <TextView
-            android:id="@+id/tv_reset_password"
-            style="@style/loginPage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/forgotPassword"
-            android:layout_marginTop="9dp"
-            android:background="@color/dayName"
-            android:text="@string/login"
-            android:visibility="gone"
-            android:textAlignment="center"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/tv_Password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="0dp"
-            style="@style/loginPage"
-            android:paddingRight="50dp"
-            android:text="@string/password"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/tv_email"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="11dp" />
-
-        <View
-            android:id="@+id/line5"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_below="@+id/tv_reset_password"
-            android:background="@color/white"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/forgotPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:text="@string/forgot"
-            style="@style/loginPage"
-            android:textStyle="bold"
-            android:layout_below="@+id/line3"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="7dp"
-            android:layout_marginEnd="7dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/forgotPassword"
-            android:background="@color/gray"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_login"
-                android:layout_width="0dp"
-                android:layout_weight=".49"
-                style="@style/loginPage"
+            <LinearLayout
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:text="@string/login"
-                android:textAlignment="center"
-                android:background="@color/dayName"
-                android:textColor="@android:color/white" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/rounded_corner"
+                android:orientation="vertical">
 
-            <View
-                android:id="@+id/line4"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_toRightOf="@+id/tv_login"
-                android:background="@android:color/white" />
+                <TextView
+                    android:id="@+id/loginText"
+                    style="@style/loginPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/login"
 
-            <TextView
-                android:id="@+id/tv_cancel_new"
-                android:layout_width="0dp"
-                style="@style/loginPage"
-                android:layout_height="wrap_content"
-                android:background="@android:color/darker_gray"
-                android:text="@string/cancel"
-                android:layout_weight=".49"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                />
-        </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <View
+                    android:id="@+id/line"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/loginText"
+                    android:layout_marginBottom="10dp"
+                    android:background="@android:color/darker_gray" />
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv_email"
+                            style="@style/loginPage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:gravity="right"
+                            android:text="@string/email"
+                            android:textColor="@color/black" />
+
+                        <EditText
+                            android:id="@+id/et_email"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:hint="@string/email1"
+                            android:inputType="textEmailAddress"
+                            android:singleLine="true" />
+                    </TableRow>
+
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv_Password"
+                            style="@style/loginPage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:text="@string/password"
+                            android:textColor="@color/black" />
+
+                        <EditText
+                            android:id="@+id/et_password"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:hint="@string/paswordlogin"
+                            android:inputType="textPassword"
+                            android:singleLine="true" />
+                    </TableRow>
+                </TableLayout>
+
+                <View
+                    android:id="@+id/line3"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/et_password"
+                    android:layout_marginBottom="10dp" />
+
+                <TextView
+                    android:id="@+id/forgotPassword"
+                    style="@style/loginPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginEnd="7dp"
+                    android:layout_marginRight="7dp"
+                    android:gravity="right"
+                    android:text="@string/forgot"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_reset_password"
+                    style="@style/loginPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/forgotPassword"
+                    android:layout_marginTop="9dp"
+                    android:background="@color/date"
+                    android:text="@string/reset_pass"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white" />
+
+
+                <View
+                    android:id="@+id/line5"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_below="@+id/tv_reset_password"
+                    android:background="@color/white" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/tv_reset_password"
+                    android:background="@color/gray"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_sign_up"
+                        style="@style/loginPage"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".49"
+                        android:background="@android:color/darker_gray"
+                        android:text="@string/signup"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white" />
+
+
+                    <View
+                        android:id="@+id/line4"
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_toRightOf="@+id/tv_login"
+                        android:background="@android:color/white" />
+
+                    <TextView
+                        android:id="@+id/tv_login"
+                        style="@style/loginPage"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".49"
+                        android:background="@color/dayName"
+                        android:text="@string/login"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+        </FrameLayout>
+        <ImageButton
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnBookK"
+            android:layout_gravity="right|top"
+            android:background="@android:color/holo_red_light"
+            android:tint="@color/white"
+            android:src="@drawable/close" />
+    </FrameLayout>
+</LinearLayout>
