--- a/app/src/main/res/layout/activity_appointment_acknowledgement.xml
+++ b/app/src/main/res/layout/activity_appointment_acknowledgement.xml
@@ -47,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:stretchColumns="0"
         android:padding="5dp"
        >
 
@@ -110,7 +111,7 @@
 
             <TextView
                 android:id="@+id/tv_timeZone"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
 
@@ -183,12 +184,13 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
            >
 
             <TextView
                 android:id="@+id/tv_email_label"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:gravity="left|center"
 
                 android:text="@string/email"
@@ -202,11 +204,11 @@
 
             <TextView
                 android:id="@+id/tv_email"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-
+                android:maxLines="2"
                 android:textSize="@dimen/font_size" />
         </TableRow>
 
