--- a/app/src/main/res/layout/activity_appointement_booking.xml
+++ b/app/src/main/res/layout/activity_appointement_booking.xml
@@ -42,7 +42,7 @@
 
             <TextView
 
-                android:text="No Time Slots available on"
+                android:text="No time slots available on"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:textSize="@dimen/header"
