--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -59,13 +59,13 @@
                     <LinearLayout
                         android:id="@+id/line1"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp">
+                        android:layout_height="50dp">
 
 
                         <TextView
                             android:id="@+id/textView"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignBottom="@+id/et_email"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
@@ -94,7 +94,7 @@
                         <EditText
                             android:id="@+id/et_email"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignParentTop="true"
                             android:layout_toEndOf="@+id/textView32"
                             android:layout_toRightOf="@+id/textView32"
@@ -129,7 +129,7 @@
                             <TextView
                                 android:id="@+id/textVie"
                                 android:layout_width="0dp"
-                                android:layout_height="40dp"
+                                android:layout_height="50dp"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentStart="true"
                                 android:layout_alignParentTop="true"
@@ -154,7 +154,7 @@
                             <EditText
                                 android:id="@+id/et_password"
                                 android:layout_width="0dp"
-                                android:layout_height="40dp"
+                                android:layout_height="50dp"
                                 android:paddingRight="5dp"
                                 android:layout_alignParentTop="true"
                                 android:layout_toEndOf="@+id/textView32"
@@ -175,7 +175,7 @@
                             <TextView
                                 android:id="@+id/tw"
                                 android:layout_width="0dp"
-                                android:layout_height="40dp"
+                                android:layout_height="50dp"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentStart="true"
                                 android:layout_alignParentTop="true"
@@ -200,7 +200,7 @@
                             <EditText
                                 android:id="@+id/et_conf_pass"
                                 android:layout_width="0dp"
-                                android:layout_height="40dp"
+                                android:layout_height="50dp"
                                 android:layout_alignParentTop="true"
                                 android:paddingRight="5dp"
                                 android:layout_toEndOf="@+id/textView32"
@@ -223,7 +223,7 @@
                         <TextView
                             android:id="@+id/textView32"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignBottom="@+id/et_phone"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
@@ -248,7 +248,7 @@
                         <EditText
                             android:id="@+id/et_phone"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignLeft="@+id/et_email"
                             android:layout_alignStart="@+id/et_email"
                             android:layout_below="@+id/lv_password"
@@ -298,7 +298,7 @@
                         <TextView
 
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignBottom="@+id/et_phone"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
@@ -322,7 +322,9 @@
                         <Spinner
                             android:id="@+id/et_title"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
                             android:layout_above="@+id/textView33"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true"
@@ -342,7 +344,7 @@
                         <TextView
 
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignBottom="@+id/et_phone"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
@@ -366,7 +368,7 @@
                         <EditText
                             android:id="@+id/et_firstname"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignLeft="@+id/et_email"
                             android:layout_alignStart="@+id/et_email"
                             android:layout_below="@+id/lv_password"
@@ -387,7 +389,7 @@
                         <TextView
 
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignBottom="@+id/et_phone"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
@@ -411,7 +413,7 @@
                         <EditText
                             android:id="@+id/et_lastName"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignLeft="@+id/et_email"
                             android:layout_alignStart="@+id/et_email"
                             android:layout_below="@+id/lv_password"
@@ -432,7 +434,7 @@
                         <TextView
 
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignBottom="@+id/et_phone"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
@@ -456,7 +458,7 @@
                         <EditText
                             android:id="@+id/et_date_birth"
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
+                            android:layout_height="50dp"
                             android:layout_alignLeft="@+id/et_email"
                             android:layout_alignStart="@+id/et_email"
                             android:layout_below="@+id/lv_password"
@@ -464,6 +466,7 @@
                             android:drawableRight="@android:drawable/ic_menu_my_calendar"
                             android:hint="@string/dob_date"
                             android:inputType="number"
+                            android:drawablePadding="5dp"
                             android:maxLength="15"
                             android:singleLine="true" />
                     </LinearLayout>
@@ -503,7 +506,7 @@
                             <ToggleButton
                                 android:id="@+id/tb_female"
                                 android:layout_width="wrap_content"
-                                android:layout_height="40dp"
+                                android:layout_height="50dp"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentRight="true"
                                 android:layout_alignParentTop="true"
@@ -516,7 +519,7 @@
                             <ToggleButton
                                 android:id="@+id/tb_male"
                                 android:layout_width="wrap_content"
-                                android:layout_height="40dp"
+                                android:layout_height="50dp"
                                 android:layout_alignParentTop="true"
                                 android:layout_toLeftOf="@+id/tb_female"
                                 android:layout_toStartOf="@+id/tb_female"
