--- a/app/src/main/res/layout/header_for_home_page.xml
+++ b/app/src/main/res/layout/header_for_home_page.xml
@@ -35,7 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/white"
+            android:textColor="@color/inside_blue"
+            android:textStyle="bold"
             android:layout_marginRight="10dp"/>
     </LinearLayout>
 
