--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -133,7 +133,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:gravity="left|center"
-                        android:text="@string/first"
+                        android:text="@string/names"
                         android:textSize="@dimen/font_size" />
 
                     <TextView
