Validation Messages added

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,9 @@
         <item name="android:background">@color/gray</item>
     </style>
 
+    <style name="error_appearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/upcoming_text</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
