--- a/app/src/main/res/layout/activity_reset_nforgot.xml
+++ b/app/src/main/res/layout/activity_reset_nforgot.xml
@@ -74,7 +74,7 @@
                     android:gravity="center"
                     android:text=":" />
 
-                <EditText
+                <EditText     android:textSize="@dimen/font_size"
                     android:id="@+id/et_email"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
@@ -125,7 +125,7 @@
             android:layout_below="@+id/tv_forgot_msg"
             android:layout_marginTop="10dp"
             android:gravity="left|center"
-            android:text="@string/reset_pass"
+            android:text="@string/reset_pass_samll"
             android:textSize="@dimen/sub_text"
             android:textStyle="bold" />
 
@@ -164,7 +164,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_toLeftOf="@+id/tv_semi"
                         android:layout_toStartOf="@+id/tv_semi"
-                        android:layout_weight=".7"
+                        android:layout_weight=".4"
                         android:gravity="left|center"
                         android:padding="5dp"
                         android:text="@string/email"
@@ -183,14 +183,14 @@
                         android:gravity="center"
                         android:text=":" />
 
-                    <EditText
+                    <EditText     android:textSize="@dimen/font_size"
                         android:id="@+id/et_reset_email"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_alignParentTop="true"
                         android:layout_toEndOf="@+id/textView32"
                         android:layout_toRightOf="@+id/textView32"
-                        android:layout_weight=".56"
+                        android:layout_weight=".6"
                         android:hint="@string/email1"
                         android:inputType="textEmailAddress"
                         android:maxLength="45"
@@ -215,7 +215,7 @@
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
                             android:layout_alignParentTop="true"
-                            android:layout_weight=".7"
+                            android:layout_weight=".4"
                             android:gravity="left|center"
                             android:maxLines="1"
                             android:padding="5dp"
@@ -235,15 +235,18 @@
                             android:text=":" />
 
                         <EditText
+                            android:textSize="@dimen/font_size"
                             android:id="@+id/et_from_email_pass"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:layout_alignParentTop="true"
                             android:layout_toEndOf="@+id/textView32"
                             android:layout_toRightOf="@+id/textView32"
-                            android:layout_weight=".56"
+                            android:layout_weight=".6"
                             android:hint="@string/enter_mailed_confirm"
-                            android:inputType="textEmailAddress"
+
+                            android:drawableRight="@drawable/ic_visibility_black_24dp"
+                            android:inputType="textPassword"
                             android:maxLength="30"
                             android:paddingRight="5dp"
                             android:singleLine="true" />
@@ -271,7 +274,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_weight=".7"
+                        android:layout_weight=".4"
                         android:gravity="left|center"
                         android:padding="5dp"
                         android:text="@string/new_password"
@@ -290,15 +293,17 @@
                         android:text=":" />
 
                     <EditText
+                        android:textSize="@dimen/font_size"
                         android:id="@+id/et_password"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_alignParentTop="true"
                         android:layout_toEndOf="@+id/textView32"
                         android:layout_toRightOf="@+id/textView32"
-                        android:layout_weight=".56"
+                        android:layout_weight=".6"
                         android:hint="@string/enter_new_password"
-                        android:inputType="textEmailAddress"
+                        android:inputType="textPassword"
+                        android:drawableRight="@drawable/ic_visibility_black_24dp"
                         android:maxLength="30"
                         android:paddingRight="5dp"
                         android:singleLine="true" />
@@ -316,7 +321,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_weight=".7"
+                        android:layout_weight=".4"
                         android:gravity="left|center"
                         android:padding="5dp"
                         android:text="@string/conf_password"
@@ -334,16 +339,17 @@
                         android:gravity="center"
                         android:text=":" />
 
-                    <EditText
+                    <EditText     android:textSize="@dimen/font_size"
                         android:id="@+id/et_conf_pass"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_alignParentTop="true"
                         android:layout_toEndOf="@+id/textView32"
                         android:layout_toRightOf="@+id/textView32"
-                        android:layout_weight=".56"
+                        android:layout_weight=".6"
                         android:hint="@string/enter_confirm"
-                        android:inputType="textEmailAddress"
+                        android:inputType="textPassword"
+                        android:drawableRight="@drawable/ic_visibility_black_24dp"
                         android:maxLength="30"
                         android:paddingRight="5dp"
                         android:singleLine="true" />
