--- a/app/src/main/res/layout/login_alert.xml
+++ b/app/src/main/res/layout/login_alert.xml
@@ -77,6 +77,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_weight="1"
+                            android:textSize="@dimen/font_size"
                             android:hint="@string/email1"
                             android:inputType="textEmailAddress"
                             android:singleLine="true" />
@@ -101,6 +102,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_weight="1"
+                            android:textSize="@dimen/font_size"
                             android:longClickable="false"
                             android:hint="@string/paswordlogin"
                             android:drawableRight="@drawable/ic_visibility_black_24dp"
