--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -155,23 +155,18 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".003"
-        android:background="@color/divider" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".38"
-        android:orientation="vertical"
         android:background="@color/list_back"
-        android:weightSum="1"
-        >
+        android:orientation="vertical"
+        android:weightSum="1">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/blue">
 
             <TextView
                 android:id="@+id/tv_count_appointments"
@@ -188,18 +183,28 @@
                 android:textColor="@color/inside_blue"
                 android:textSize="@dimen/font_size"
                 android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.02"
+                android:id="@+id/tv_search_and_title"
+
                 android:padding="5dp"
                 android:paddingBottom="5dp"
                 android:paddingTop="10dp"
-                android:background="@color/blue"
                 android:text="@string/upcomingAppointment"
+
                 android:textColor="@color/inside_blue"
                 android:textSize="@dimen/font_size"
                 android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/iv_search"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search"/>
         </LinearLayout>
 
         <View
@@ -212,24 +217,32 @@
             android:id="@+id/lv_upcomingAppointent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@android:color/transparent"
-            android:layout_weight="0.98"/>
+            android:layout_weight="0.98"
+            android:background="@android:color/transparent" />
+
         <LinearLayout
             android:id="@+id/tv_empty_view"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:visibility="gone"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@color/list_back"
-            android:layout_marginRight="5dp">
+            android:visibility="gone">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:text="No appointment found,\n please book a new appointment."
-                android:textSize="@dimen/header"
-                android:textColor="@color/hostisMe"
                 android:gravity="center"
-                />
+                android:text="No appointment found,\n please book a new appointment."
+                android:textColor="@color/hostisMe"
+                android:textSize="@dimen/header" />
         </LinearLayout>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".003"
+        android:background="@color/divider" />
+
 </LinearLayout>
