--- a/app/src/main/res/layout/fragment_common_header.xml
+++ b/app/src/main/res/layout/fragment_common_header.xml
@@ -4,39 +4,47 @@
     android:layout_height="60dp"
     android:clickable="true"
     >
-    <LinearLayout
+
+    <RelativeLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:theme="@style/AppTheme"
-        android:id="@+id/linearLayout"
+        android:layout_gravity="top"
         android:background="@color/blue"
-        android:layout_gravity="top">
+        android:theme="@style/AppTheme">
+
         <ImageView
             android:id="@+id/iv_back_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/back"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:layout_margin="5dp"
-            android:tint="@android:color/white"
-            android:layout_gravity="center_vertical" />
+            android:src="@drawable/back"
+            android:tint="@android:color/white" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:id="@+id/tv_title"
-            android:textStyle="bold"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="@color/inside_blue"
             android:textSize="21sp"
-            android:layout_gravity="center" />
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/iv_home_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
-            android:backgroundTint="@android:color/white"
-            android:layout_marginRight="10dp"/>
-    </LinearLayout>
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:backgroundTint="@android:color/white" />
+    </RelativeLayout>
 
 </FrameLayout>
