--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="logo_bg">#04c7ff</color>
     <color name="black">#000</color>
     <color name="green_confirmation">#2AFF2A</color>
-
+    <color name="red">#ff0000</color>
     <color name="home_back">#FEFEFE</color>
     <color name="list_back">#f2f2f2</color>
     <color name="background_home">#eeeeee</color>
